--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -472,6 +472,13 @@ footer {
         flex-direction: column-reverse;
     }
 
+    .page-header {
+        height: 40vh;
+        /* Reduced height on mobile */
+        min-height: 300px;
+        background-attachment: scroll;
+    }
+
     .page-header h1 {
         font-size: 3rem;
     }
